{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 186,
  "lineage": "2ba0e800-8b62-5389-300f-133ef0fccf96",
  "resources": [
    {
      "module": "module.alb_stg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "ass-alb-log-staging",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:loadbalancer/app/ass-alb-staging/f05806759728af60",
            "arn_suffix": "app/ass-alb-staging/f05806759728af60",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ass-alb-staging-1161154601.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:loadbalancer/app/ass-alb-staging/f05806759728af60",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ass-alb-staging",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00fc12cf89682896c",
              "sg-0162dbf7c463bf011",
              "sg-0eeb56ff95d390638"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e9079cab760dce6"
              },
              {
                "subnet_id": "subnet-0eb57e4fa39609973"
              }
            ],
            "subnets": [
              "subnet-02e9079cab760dce6",
              "subnet-0eb57e4fa39609973"
            ],
            "vpc_id": "vpc-0c5d0041a8f0d951a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb_stg.aws_s3_bucket.alb_log_stg",
            "module.alb_stg.module.http_redirect_security_group.aws_security_group.main",
            "module.alb_stg.module.http_security_group.aws_security_group.main",
            "module.alb_stg.module.https_security_group.aws_security_group.main",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:listener/app/ass-alb-staging/f05806759728af60/6d5c790028196903",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/*",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:listener/app/ass-alb-staging/f05806759728af60/6d5c790028196903",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:loadbalancer/app/ass-alb-staging/f05806759728af60",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.aws_lb.main",
            "module.alb_stg.aws_s3_bucket.alb_log_stg",
            "module.alb_stg.module.http_redirect_security_group.aws_security_group.main",
            "module.alb_stg.module.http_security_group.aws_security_group.main",
            "module.alb_stg.module.https_security_group.aws_security_group.main",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:targetgroup/ass-target-staging/d291ed2d262aadf2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:listener-rule/app/ass-alb-staging/f05806759728af60/6d5c790028196903/5df119ade5c8b9bb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:listener-rule/app/ass-alb-staging/f05806759728af60/6d5c790028196903/5df119ade5c8b9bb",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:listener/app/ass-alb-staging/f05806759728af60/6d5c790028196903",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.aws_lb.main",
            "module.alb_stg.aws_lb_listener.http",
            "module.alb_stg.aws_lb_target_group.main",
            "module.alb_stg.aws_s3_bucket.alb_log_stg",
            "module.alb_stg.module.http_redirect_security_group.aws_security_group.main",
            "module.alb_stg.module.http_security_group.aws_security_group.main",
            "module.alb_stg.module.https_security_group.aws_security_group.main",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:targetgroup/ass-target-staging/d291ed2d262aadf2",
            "arn_suffix": "targetgroup/ass-target-staging/d291ed2d262aadf2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/api/v1/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730335441282:targetgroup/ass-target-staging/d291ed2d262aadf2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ass-target-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "dependencies": [
            "module.alb_stg.aws_lb.main",
            "module.alb_stg.aws_s3_bucket.alb_log_stg",
            "module.alb_stg.module.http_redirect_security_group.aws_security_group.main",
            "module.alb_stg.module.http_security_group.aws_security_group.main",
            "module.alb_stg.module.https_security_group.aws_security_group.main",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.http_redirect_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:security-group/sg-00fc12cf89682896c",
            "description": "ass-http-redirect",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fc12cf89682896c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ass-http-redirect",
            "name_prefix": "",
            "owner_id": "730335441282",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.http_redirect_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2548264643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00fc12cf89682896c",
            "security_group_rule_id": "sgr-0cb3ee2193f5aec9d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.module.http_redirect_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.http_redirect_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-1474690430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00fc12cf89682896c",
            "security_group_rule_id": "sgr-0f08bc2ceac23feb4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.module.http_redirect_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.http_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:security-group/sg-0eeb56ff95d390638",
            "description": "ass-http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eeb56ff95d390638",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ass-http",
            "name_prefix": "",
            "owner_id": "730335441282",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.http_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4216541674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eeb56ff95d390638",
            "security_group_rule_id": "sgr-047fc2d77f4cd311a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.module.http_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.http_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3650061444",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eeb56ff95d390638",
            "security_group_rule_id": "sgr-0f5da3a993747f5bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.module.http_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.https_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:security-group/sg-0162dbf7c463bf011",
            "description": "ass-https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0162dbf7c463bf011",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ass-https",
            "name_prefix": "",
            "owner_id": "730335441282",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.https_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2654706054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0162dbf7c463bf011",
            "security_group_rule_id": "sgr-0fca450e0672ab85f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.module.https_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_stg.module.https_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-22887657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0162dbf7c463bf011",
            "security_group_rule_id": "sgr-051aea2f18eaea85a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_stg.module.https_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_rds_stg.module.rds_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:security-group/sg-0ab46e8694320dffe",
            "description": "ass-rds-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab46e8694320dffe",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.10.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ass-rds-security-group",
            "name_prefix": "",
            "owner_id": "730335441282",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_rds_stg.module.rds_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-835862078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ab46e8694320dffe",
            "security_group_rule_id": "sgr-0860e995e391fc49a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_rds_stg.module.rds_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_rds_stg.module.rds_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.10.0.0/16"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3177812991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab46e8694320dffe",
            "security_group_rule_id": "sgr-06057fcd7cc5cb773",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_rds_stg.module.rds_security_group.aws_security_group.main",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05740cb0de78cbfb1",
            "association_id": "eipassoc-016b4fa6a83e4e4ee",
            "domain": "vpc",
            "id": "eipalloc-05740cb0de78cbfb1",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0fccd56cabea40b74",
            "private_dns": "ip-172-10-1-202.ap-northeast-1.compute.internal",
            "private_ip": "172.10.1.202",
            "public_dns": "ec2-3-112-146-57.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.146.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Zone": "ap-northeast-1a"
            },
            "tags_all": {
              "Zone": "ap-northeast-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d3dd4400656c794",
            "association_id": "eipassoc-030a8b4b3f1218cb0",
            "domain": "vpc",
            "id": "eipalloc-01d3dd4400656c794",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-078e788ab1e08e66d",
            "private_dns": "ip-172-10-0-140.ap-northeast-1.compute.internal",
            "private_ip": "172.10.0.140",
            "public_dns": "ec2-35-73-66-114.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.66.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Zone": "ap-northeast-1c"
            },
            "tags_all": {
              "Zone": "ap-northeast-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:internet-gateway/igw-063c997473d3b2209",
            "id": "igw-063c997473d3b2209",
            "owner_id": "730335441282",
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063c997473d3b2209",
            "id": "r-rtb-02caefd75bea61ac41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02caefd75bea61ac4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_sbunet_stg.aws_internet_gateway.main",
            "module.ass_sbunet_stg.aws_route_table.public",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063c997473d3b2209",
            "id": "r-rtb-07821dedc26c1f2e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07821dedc26c1f2e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_sbunet_stg.aws_internet_gateway.main",
            "module.ass_sbunet_stg.aws_route_table.public",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:route-table/rtb-07fc5588aec7ac7b0",
            "id": "rtb-07fc5588aec7ac7b0",
            "owner_id": "730335441282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d1250bef9f367ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Private": "true",
              "Zone": "ap-northeast-1a"
            },
            "tags_all": {
              "Private": "true",
              "Zone": "ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:route-table/rtb-0633fc4570094241c",
            "id": "rtb-0633fc4570094241c",
            "owner_id": "730335441282",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Private": "true",
              "Zone": "ap-northeast-1c"
            },
            "tags_all": {
              "Private": "true",
              "Zone": "ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:route-table/rtb-02caefd75bea61ac4",
            "id": "rtb-02caefd75bea61ac4",
            "owner_id": "730335441282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063c997473d3b2209",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Public": "true"
            },
            "tags_all": {
              "Public": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:route-table/rtb-07821dedc26c1f2e3",
            "id": "rtb-07821dedc26c1f2e3",
            "owner_id": "730335441282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063c997473d3b2209",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Public": "true"
            },
            "tags_all": {
              "Public": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f984b537b5043b8b",
            "route_table_id": "rtb-07fc5588aec7ac7b0",
            "subnet_id": "subnet-0826e1fb155eaba13"
          },
          "dependencies": [
            "module.ass_sbunet_stg.aws_route_table.private",
            "module.ass_sbunet_stg.aws_subnet.private-subnet",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d089fac070a3b25",
            "route_table_id": "rtb-0633fc4570094241c",
            "subnet_id": "subnet-0f7f3554ea0917408"
          },
          "dependencies": [
            "module.ass_sbunet_stg.aws_route_table.private",
            "module.ass_sbunet_stg.aws_subnet.private-subnet",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd81596f9cc14918",
            "route_table_id": "rtb-02caefd75bea61ac4",
            "subnet_id": "subnet-02e9079cab760dce6"
          },
          "dependencies": [
            "module.ass_sbunet_stg.aws_route_table.public",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e2357f7bf4f9b5b",
            "route_table_id": "rtb-07821dedc26c1f2e3",
            "subnet_id": "subnet-0eb57e4fa39609973"
          },
          "dependencies": [
            "module.ass_sbunet_stg.aws_route_table.public",
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:subnet/subnet-0826e1fb155eaba13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0826e1fb155eaba13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335441282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Private": "true",
              "Zone": "ap-northeast-1a"
            },
            "tags_all": {
              "Private": "true",
              "Zone": "ap-northeast-1a"
            },
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "dependencies": [
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:subnet/subnet-0f7f3554ea0917408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7f3554ea0917408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335441282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Private": "true",
              "Zone": "ap-northeast-1c"
            },
            "tags_all": {
              "Private": "true",
              "Zone": "ap-northeast-1c"
            },
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "dependencies": [
            "module.ass_sbunet_stg.aws_subnet.public-subnet",
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_sbunet_stg",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:subnet/subnet-02e9079cab760dce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e9079cab760dce6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335441282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Zone": "ap-northeast-1a",
              "public": "true"
            },
            "tags_all": {
              "Zone": "ap-northeast-1a",
              "public": "true"
            },
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:subnet/subnet-0eb57e4fa39609973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb57e4fa39609973",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335441282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Zone": "ap-northeast-1c",
              "public": "true"
            },
            "tags_all": {
              "Zone": "ap-northeast-1c",
              "public": "true"
            },
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ass_vpc_stg",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:vpc/vpc-0c5d0041a8f0d951a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.10.0.0/16",
            "default_network_acl_id": "acl-0c89d38593e809b58",
            "default_route_table_id": "rtb-0f97fbd9043d6b327",
            "default_security_group_id": "sg-0895c67fb6c5165df",
            "dhcp_options_id": "dopt-08bdba75e86cc369d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5d0041a8f0d951a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f97fbd9043d6b327",
            "owner_id": "730335441282"
          }
        }
      ]
    },
    {
      "module": "module.ecs_stg.module.nginx_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730335441282:security-group/sg-0c44c8c5e3a3c8ebc",
            "description": "ass-nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c44c8c5e3a3c8ebc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.10.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ass-nginx",
            "name_prefix": "",
            "owner_id": "730335441282",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5d0041a8f0d951a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ass_vpc_stg.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}